--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>定位后规划线路</title>
 
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <script type="text/javascript" src='http://webapi.amap.com/maps?v=1.3&plugin=AMap.Geolocation,AMap.ToolBar,AMap.Geocoder,AMap.PlaceSearch,AMap.Autocomplete,AMap.Driving&key=您申请的key值'></script>
+    <script type="text/javascript" src='https://webapi.amap.com/maps?v=1.3&plugin=AMap.Geolocation,AMap.ToolBar,AMap.Geocoder,AMap.PlaceSearch,AMap.Autocomplete,AMap.Driving&key=608d75903d29ad471362f8c58c550daf'></script>
   </head>
   <body onload='startLocate()'>
     <div  style="width:100%;height:100%;position:absolute;overflow:hidden">
